Bug 1047600 - duff protocol should never keyword search. r=smaug, a=sledru